2004-01-21 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b77
	
	* Change: Removed Debug Code (Thanks Joan).

	* Change: Added some quotes.

2004-01-20 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b76

	* Bugfix: If we are in PHP > 4.1.0 we can use 3rd Parameter for htmlentities().
	  This fixes a Problem when editing Album titles. 
	  E.g. in chinese BIG5 or UTF8 they are now displayed correct.

	* Little Skin change. Makes it better with white backgrounds.

	* Removed a unnecessary linebreak for lang pulldown.

2004-01-14 Andrew Lindeman  <joyoflinux@yahoo.com> 1.4.2-cvs-b75

	* Fixed bug #865603.  We now ignore CVS directories in the album
	  directory, so they are not listed as invalid.
	
2004-01-13  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.2-cvs-b74

	* Fixed move-album so it checks that the source and destination
	  galleries exist. This would lead to a grave corruption of the
	  album DB.

2004-01-13  Bharat Mediratta  <bharat@menalto.com> 1.4.2-cvs-b73

	* Committed new version of ImageTools.jar; same as the old one but
	  compiled under jdk1.1 for broader compatibility (specifically it now
	  works with the MS Java VM that comes with Windows XP)

2004-01-12  Bharat Mediratta  <bharat@menalto.com> 1.4.2-cvs-b72

	* Fixed minor vulnerability where a hacker could specify an alternate
	  name when Gallery is configured to use logged in users names.

2004-01-07  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.2-cvs-b71

	* Fixed creating root albums under certain conditions, where the
	  protocol would return an error message.

2004-01-05  Chris Schwerdt    <muti@afterglo.ws> 1.4.2-cvs-b70

	* Disable output buffering in gallery remote if debug mode is
	  enabled.

2004-01-06 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b69

	* Substitute shell_exec with exec in configwizard.

	* Added some quotes.

	* Little Commenting.

2004-01-05  Chris Schwerdt    <muti@afterglo.ws> 1.4.2-cvs-b68
	* Added ability for gallery remote to fetch images remotely
	  into an album.
