@@ -1,3 +1,8 @@
+2004-01-21 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b78
+	
+	* Change: Added possibility for LARGE bordes, bigger Images and MORE pages
+		  in edit album properties.
+
 2004-01-21 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b77
 	
 	* Change: Removed Debug Code (Thanks Joan).
